--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,10 @@
     top: 0;
 } */
 
+.main{
+    position: relative;
+}
+
 .cats{
     width: 100%;
     height: 100vh;
@@ -21,8 +25,19 @@
     background-attachment: fixed;
 }
 
+.menu{
+    position: absolute;
+    top: 0;
+    height: 100vh;
+    width: 20px;
+    max-width: 400px;
+    background: #97ce4c;
+    border-radius: 0 30px 30px 0;
+    overflow: hidden;
+}
+
 #info{
     position: absolute;
     bottom: 20px;
-    left: 20px;
+    right: 20px;
 }
