--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -110,6 +110,12 @@ body{
     color: #44281d;
 }
 
+.display__main{
+    width: 100%;
+    height: 100%;
+    border: 1px solid yellow;
+}
+
 #info{
     position: fixed;
     bottom: 20px;
