--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,15 +31,8 @@ body{
     background-attachment: fixed;
 }
 
-.menu{
-    position: absolute;
-    top: 0;
-    height: 100vh;
-    width: 20px;
-    max-width: 400px;
-    background: #97ce4c;
-    border-radius: 0 30px 30px 0;
-    overflow: hidden;
+.cats img{
+    height: 110vh;
 }
 
 .title{
@@ -110,10 +103,36 @@ body{
     color: #44281d;
 }
 
+.main__container__display{
+    width: 73%;
+}
+
 .display__main{
     width: 100%;
     height: 100%;
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
+    color: white;
+    border-radius: 15px;
+    background: rgb(50, 50, 60);
+}
+
+.display__main h4{
+    color: #e89ac7;
+    font-size: 36px;
+    font-weight: 900;
+}
+
+.display__main > span:first-of-type{
+    color: #97ce4c;
+    font-size: 24px;
+    font-weight: 300;
+}
+
+.display__main--characters{
+    color: white;
+    text-transform: uppercase;
+    font-weight: 100;
+    font-size: 28px;
 }
 
 #info{
