--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,7 +67,7 @@ body{
     font-weight: 900;
 }
 
-.main__container__menu{
+.main__container__menu, .main__container__menu-sm{
     height: 100vh;
     width: 27%;
     max-width: 400px;
@@ -77,9 +77,16 @@ body{
     box-sizing: border-box;
 }
 
+.main__container__menu-sm{
+    width: 100%;
+    max-width: 575px;
+    height: 10vh;
+}
+
 .main__container{
     height: 100vh;
     background: rgb(30,30,40);
+    overflow: hidden;
 }
 
 .main__container__menu--episode{
@@ -107,19 +114,11 @@ body{
     transition: 0.1s ease;
 }
 
-.main__container__menu>span{
+.main__container__menu>span, .main__container__menu-sm>button{
     font-size: 24px;
     font-weight: 900;
     border-bottom: 1px solid #44281d;
     color: #44281d;
-}
-
-@media (max-width: 575px){
-    .main__container__menu{
-        width: 100%;
-        max-width: 575px;
-        height: 100vh;
-    }
 }
 
 .main__container__display{
@@ -234,6 +233,47 @@ body{
     font-weight: 100;
     font-size: 20px;
     color: white;
+}
+
+@media (max-width: 575px){
+
+    .main__container__display{
+        width: 100%;
+        height: 90vh;
+    }
+    
+    .display__main__characters{
+        height: 80vh;
+        overflow: scroll;
+    }
+    .display__main__characters--main{
+        height: 150px;
+        min-width: 300px;
+        width: 100%;
+        border-radius: 15px;
+        overflow: hidden;
+        background: rgba(255, 255, 255, 0.1);
+        transition: 0.3s ease;
+        cursor: pointer;
+        color: white;
+        border: none;
+        text-indent: none;
+    }
+
+    .display__main__characters--img img{
+        height: 150px;
+        width: 150px;
+    }
+
+    .display__main__characters--img{
+        width: 150px;
+        height: 150px;
+        border-radius: 15px 0 0 15px;
+        overflow: hidden;
+    }
+    .display__main__characters--description{
+        height: 150px;
+    }
 }
 
 #info{
