--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,7 +62,6 @@ body{
 /*? START SIDE MENU ?*/
 
 .main__container__menu, .main__container__menu-sm{
-    height: 100vh;
     width: 27%;
     max-width: 400px;
     min-width: 200px;
@@ -71,14 +70,18 @@ body{
     box-sizing: border-box;
 }
 
+.main__container__menu{
+    height: 100vh;
+}
+
 .main__container__menu-sm{
+    position: absolute;
     width: 100%;
     max-width: 575px;
-    height: 10vh;
+    min-height: 10vh;
 }
 
 #episodes-sm{
-    position: fixed;
     height: 90vh;
     width: 100%;
     bottom: -20px;
@@ -117,10 +120,16 @@ body{
     transition: 0.1s ease;
 }
 
-.main__container__menu>span, .main__container__menu-sm>button{
+.main__container__menu>span{
     font-size: 24px;
     font-weight: 900;
     border-bottom: 1px solid #44281d;
+    color: #44281d;
+}
+
+.main__container__menu-sm>button{
+    font-size: 32px;
+    font-weight: 900;
     color: #44281d;
 }
 
@@ -205,7 +214,6 @@ body{
 
 .character__name{
     font-size: 32px;
-    /* line-height: 10px; */
 }
 
 .character__info{
@@ -214,7 +222,7 @@ body{
     font-weight: 100;
 }
 
-.status--green, .status--red{
+.status--green, .status--red, .status--grey{
     height: 8px;
     width: 8px;
     border-radius: 50%;
@@ -247,6 +255,7 @@ body{
 @media (max-width: 575px){
 
     .main__container__display{
+        margin-top: 10vh;
         width: 100%;
         height: 90vh;
     }
@@ -282,6 +291,22 @@ body{
     }
     .display__main__characters--description{
         height: 150px;
+    }
+
+    .character__name{
+        font-size: 24px;
+    }
+    
+    .character__info{
+        font-size: 18px;
+    }
+
+    .character__lastLocation span:first-child{
+        font-size: 18px;
+    }
+    
+    .character__lastLocation span:last-child{
+        font-size: 14px;
     }
 }
 
