debugging errors: character image, episodes list padding

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -367,6 +367,10 @@ h1{
     .character__lastLocation span:last-child{
         font-size: 14px;
     }
+
+    .display__main--character{
+        text-align: center;
+    }
 }
 
 #info{
