--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -82,7 +82,7 @@ h1{
 .main__container__menu-sm{
     position: absolute;
     width: 100%;
-    max-width: 575px;
+    max-width: 768px;
     min-height: 10vh;
 }
 
@@ -314,12 +314,12 @@ h1{
 
 /* @media (max-width: 575px){ */
 @media (max-width: 768px){
-/* 
+
     .main__container__display{
         margin-top: 10vh;
         width: 100%;
         height: 90vh;
-    } */
+    }
 
     .display__main__characters{
         height: 100%;
@@ -393,7 +393,7 @@ h1{
     }
 }
 
-@media (max-width: 575px){
+/* @media (max-width: 575px){
 
     .main__container__display{
         margin-top: 10vh;
@@ -401,7 +401,7 @@ h1{
         height: 90vh;
     }
 
-}
+} */
 
 #info{
     position: fixed;
